--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--Http 并不是 angular2/core 的一部分，这是一个可选服务在 angular2/http 库里。此外，该库并不是核心Angular脚本文件里，所以还需要在 index.html 的引入-->
   <script src="node_modules/angular2/bundles/http.dev.js"></script>
+  <script src="calculator.js"></script>
 
 </head>
 <body>
