--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <script src="calculator.js"></script>
   <!--侧边导航栏字体图片CDN-->
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+  <!--ngx-Bootstrap datePicker样式文件-->
+  <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
 
 </head>
 <body>
