由bootstrap3升级到bootstrap4（想体验flex布局，和Sass），由于版本差距过大，无法平滑升级，因此新开分支，之前的备用

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,26 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+
+  <!-- Required meta tags -->
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Cpaweb</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="calculator.js"></script>
+
   <!--侧边导航栏字体图片CDN-->
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   <!--ngx-Bootstrap datePicker样式文件-->
   <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
 
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
